# project-cyber

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
BadDll/: CMakeLists.txt
BadDll/include/: unhook.hpp
BadDll/src/: dllmain.cpp  hooks.cpp  unhook.cpp
EdrSim/: CMakeLists.txt
EdrSim/include/: edr_api.hpp  simulate.hpp  watchdog.hpp
EdrSim/src/: dllmain.cpp  edr_api.cpp  simulate.cpp  watchdog.cpp
Loader/: CMakeLists.txt
Loader/exports/: version_x64.def
Loader/include/: loader.hpp
Loader/res/: Loader.config.json
Loader/src/: config.cpp  dllmain.cpp  exports_forward.cpp  exports_lab.cpp  injector_main.cpp  loader.cpp
cmake/: BuildDetours.cmake
scripts/: build.ps1  demo.ps1
shared/: CMakeLists.txt  lab_log.cpp  lab_log.h
shared/syscalls/: nt_types.h  syscall.cpp  syscall.h
